--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18",
     "react-dom": "18",
     "react-icons": "^4.11.0",
+    "recharts": "^2.9.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
