--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18",
     "react-icons": "^4.11.0",
     "recharts": "^2.9.0",
+    "use-debounce": "^9.0.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
